syntax = "proto3";
package tendermint.cns.cns;

import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "cns/cns.proto";

option go_package = "github.com/tendermint/cns/x/cns/types";

// Query defines the gRPC querier service.
service Query {
  rpc QueryChainInfo(QueryChainInfoRequest) returns (QueryChainInfoResponse) {
    option (google.api.http).get = "/cns/cns/info/{chain_name}";
  }

  rpc QueryBalances(QueryBalancesRequest) returns (QueryBalancesResponse) {
    option (google.api.http).get = "/cns/cns/balances/{addr}";
  }
}

message QueryChainInfoRequest{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  string chain_name = 1;
}

message QueryChainInfoResponse{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  ChainInfo info = 1[(gogoproto.nullable) = false];
}

message QueryBalancesRequest{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  string addr = 1;
}

message QueryBalancesResponse{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  repeated cosmos.base.v1beta1.Coin balances  = 8 [(gogoproto.nullable) = false];
}